<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="c.b.a.seminarjava.GornjiDioActivity"
                android:background="#C2DFFF">

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeWaitingChronometer"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/chromometer"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/start_chronometer_button"
        android:id="@+id/startChronometerButton"
        android:layout_below="@+id/timeWaitingChronometer"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:background="#00FF80"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/pause_chronometer_button"
        android:id="@+id/pauseChronometerButton"
        android:background="#FACC2E"
        android:layout_alignTop="@+id/startChronometerButton"
        android:layout_toEndOf="@+id/startChronometerButton"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/reset_chronometer_button"
        android:id="@+id/resetChronometerButton"
        android:background="#FF0040"
        android:layout_alignTop="@+id/pauseChronometerButton"
        android:layout_toEndOf="@+id/pauseChronometerButton"/>
</RelativeLayout>
